Finished up the slideshow and added responsiveness and lazy loading for images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			crossorigin
 		/>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap&text=1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%23%24%25%26%27"
 			rel="stylesheet"
 		/>
 		<title>Galeria</title>
